사용자 해당 테스트 통계 제공 api 완료, 테스트 결과 저장 시 tests 테이블 totalCount 업데이트
